--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/ec5a08e5f4.js" crossorigin="anonymous"></script>
     <title>My Portfolio</title>
 </head>
 <body>
-
     <ul class="nav">
         <li class="nav-item">
           <a class="nav-link active" href="#">About me</a>
@@ -18,25 +18,61 @@
         <li class="nav-item">
           <a class="nav-link" href="#">Contact</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-        </li>
     </ul>
     <div id="image">
         <img src="https://pbs.twimg.com/profile_images/1202625248245538816/Ha8sFLsG_400x400.jpg" alt="profile">
     </div>
 
-    <div id="about">
+    <section id="portfolio">
+        <h3>Portfolio</h3>
+        <div class="card-group">
+         <div class="card" style="width: 18rem;">
+            <img src="https://lh3.googleusercontent.com/proxy/MWGfS8PtmM2sCuMwe3Q_hFASP4pumqHqL-cWAJQmtdpt0zJ2JcMuPPFmVA6P4xSgTZuaN8mQwt5Kg4EORe2NO7IvP7P7z6hhi2sl9mqMoOsQvhNXw5lo_n6IAtaMLSKLCickxss7PBRXtx_Vkw" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Project 1</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem;">
+            <img src="https://lh3.googleusercontent.com/proxy/MWGfS8PtmM2sCuMwe3Q_hFASP4pumqHqL-cWAJQmtdpt0zJ2JcMuPPFmVA6P4xSgTZuaN8mQwt5Kg4EORe2NO7IvP7P7z6hhi2sl9mqMoOsQvhNXw5lo_n6IAtaMLSKLCickxss7PBRXtx_Vkw" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Project 2</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem;">
+            <img src="https://lh3.googleusercontent.com/proxy/MWGfS8PtmM2sCuMwe3Q_hFASP4pumqHqL-cWAJQmtdpt0zJ2JcMuPPFmVA6P4xSgTZuaN8mQwt5Kg4EORe2NO7IvP7P7z6hhi2sl9mqMoOsQvhNXw5lo_n6IAtaMLSKLCickxss7PBRXtx_Vkw" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Project 3</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+
+    </section>
+    <section id="about">
         <h3>About me</h3>
-        <p></p>
-    </div>
-
-    <div>
-
-    </div>
-    <footer>
-        <h3>contact</h3>
-    </footer>
+        <p>I'm baby chicharrones forage pickled, photo booth food truck artisan pork belly authentic etsy biodiesel. Blue bottle YOLO farm-to-table mustache shoreditch kitsch banjo gochujang pop-up craft beer cronut vinyl unicorn freegan. Prism poutine pour-over, fashion axe tumeric biodiesel kale chips authentic fam tattooed pok pok put a bird on it. Kogi four dollar toast glossier, fingerstache jianbing pug pitchfork direct trade leggings farm-to-table pop-up flannel prism. Pinterest twee narwhal shabby chic pug hell of tousled next level keffiyeh ramps mustache.</p>
+        <div>
+            <h4>Stack</h4>
+            <p>C</p>
+            <p>Bash</p>
+            <p>Python</p>
+            <p>Javascript</p>
+            <p>MySQL</p>
+            <p>Nginx</p>
+        </div>
+    </section>
+    <section>
+        <h3>Hire me</h3>
+        <i class="fab fa-linkedin fa-3x"></i>
+        <i class="fab fa-github fa-3x"></i>
+        <i class="far fa-envelope fa-3x"></i>
+        <i class="fas fa-mobile fa-3x"></i>
+    </section>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
