--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css">
     <script src="https://kit.fontawesome.com/ec5a08e5f4.js" crossorigin="anonymous"></script>
     <title>My Portfolio</title>
 </head>
@@ -19,20 +20,20 @@
           <a class="nav-link" href="#">Contact</a>
         </li>
     </ul>
-    <div id="image">
-        <img src="https://pbs.twimg.com/profile_images/1202625248245538816/Ha8sFLsG_400x400.jpg" alt="profile">
+    <div class="text-center" id="image">
+        <img class="img-fluid" id="photo" src="https://pbs.twimg.com/profile_images/1202625248245538816/Ha8sFLsG_400x400.jpg" alt="profile" width=200 height=200>
     </div>
-
-    <section id="portfolio">
-        <h3>Portfolio</h3>
-        <div class="card-group">
-         <div class="card" style="width: 18rem;">
-            <img src="https://lh3.googleusercontent.com/proxy/MWGfS8PtmM2sCuMwe3Q_hFASP4pumqHqL-cWAJQmtdpt0zJ2JcMuPPFmVA6P4xSgTZuaN8mQwt5Kg4EORe2NO7IvP7P7z6hhi2sl9mqMoOsQvhNXw5lo_n6IAtaMLSKLCickxss7PBRXtx_Vkw" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Project 1</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
+    <div class="container-xl">
+        <section id="portfolio">
+            <h3>Portfolio</h3>
+         <div class="card-group">
+            <div class="card" style="width: 18rem;">
+                <img src="https://lh3.googleusercontent.com/proxy/MWGfS8PtmM2sCuMwe3Q_hFASP4pumqHqL-cWAJQmtdpt0zJ2JcMuPPFmVA6P4xSgTZuaN8mQwt5Kg4EORe2NO7IvP7P7z6hhi2sl9mqMoOsQvhNXw5lo_n6IAtaMLSKLCickxss7PBRXtx_Vkw" class="card-img-top" alt="...">
+                <div class="card-body">
+                <h5 class="card-title">Project 1</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
           </div>
           <div class="card" style="width: 18rem;">
             <img src="https://lh3.googleusercontent.com/proxy/MWGfS8PtmM2sCuMwe3Q_hFASP4pumqHqL-cWAJQmtdpt0zJ2JcMuPPFmVA6P4xSgTZuaN8mQwt5Kg4EORe2NO7IvP7P7z6hhi2sl9mqMoOsQvhNXw5lo_n6IAtaMLSKLCickxss7PBRXtx_Vkw" class="card-img-top" alt="...">
@@ -45,15 +46,15 @@
           <div class="card" style="width: 18rem;">
             <img src="https://lh3.googleusercontent.com/proxy/MWGfS8PtmM2sCuMwe3Q_hFASP4pumqHqL-cWAJQmtdpt0zJ2JcMuPPFmVA6P4xSgTZuaN8mQwt5Kg4EORe2NO7IvP7P7z6hhi2sl9mqMoOsQvhNXw5lo_n6IAtaMLSKLCickxss7PBRXtx_Vkw" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Project 3</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+                <h5 class="card-title">Project 3</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
             </div>
-          </div>
-        </div>
+            </div>
 
-    </section>
-    <section id="about">
+        </section>
+        <section id="about">
         <h3>About me</h3>
         <p>I'm baby chicharrones forage pickled, photo booth food truck artisan pork belly authentic etsy biodiesel. Blue bottle YOLO farm-to-table mustache shoreditch kitsch banjo gochujang pop-up craft beer cronut vinyl unicorn freegan. Prism poutine pour-over, fashion axe tumeric biodiesel kale chips authentic fam tattooed pok pok put a bird on it. Kogi four dollar toast glossier, fingerstache jianbing pug pitchfork direct trade leggings farm-to-table pop-up flannel prism. Pinterest twee narwhal shabby chic pug hell of tousled next level keffiyeh ramps mustache.</p>
         <div>
@@ -76,5 +77,6 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+</div> 
 </body>
 </html>
