--- a/index.html
+++ b/index.html
@@ -74,15 +74,17 @@
           </ul>
 
         </p>
-        <div>
             <h4>Stack</h4>
-            <p>C</p>
-            <p>Bash</p>
-            <p>Python</p>
-            <p>Javascript</p>
-            <p>MySQL</p>
-            <p>Nginx</p>
-        </div>
+            <div class="stack">
+              <img src="img/c.png" alt="">
+              <img src="img/git.png" alt="">
+              <img src="img/python.png" alt="">
+              <img src="img/js.png" alt="">
+              <img src="img/bash.png" alt="">
+              <img src="img/nginx.png" alt="">
+              <img src="img/mysql.png" alt="">
+            </div>
+
     </section>
 
     <section id="blog_entries">
@@ -99,7 +101,7 @@
     </section>
 
     <section id="hire_me">
-        <h2>Hire me</h2>
+        <h2>Contact</h2>
         <div class="icons">
           <i class="fab fa-linkedin fa-3x"></i>
           <i class="fab fa-github fa-3x"></i>
@@ -108,6 +110,9 @@
         </div>
         
     </section>
+
+      <div class="footer">
+      </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
