update: active links

--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
     <section id="hire_me">
         <h2>Contact</h2>
         <div class="icons">
-          <i class="fab fa-linkedin fa-3x"></i>
-          <i class="fab fa-github fa-3x"></i>
-          <i class="far fa-envelope fa-3x"></i>
-          <i class="fas fa-mobile fa-3x"></i>
+          <i class="fab fa-linkedin fa-3x"><a href="https://www.linkedin.com/in/david-ovalle-ariza-b1480456/"></a></i>
+          <i class="fab fa-github fa-3x"><a href="https://github.com/nukemenonai"></a></i>
+          <i class="far fa-envelope fa-3x"><a href="mailto:david.giovanni.ovalle@gmail.com"></a></i>
+          <i class="fas fa-mobile fa-3x"><a href="tel:+57312-455-6468"></a></i>
         </div>
         
     </section>
