--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
         <h2>Contact</h2>
         <div class="icons">
           <a href="https://www.linkedin.com/in/david-ovalle-ariza-b1480456/"><i class="fab fa-linkedin fa-3x"></a></i></a>
-          <a href="https://github.com/nukemenonai"></a><i class="fab fa-github fa-3x"></i></a>
-          <a href="mailto:david.giovanni.ovalle@gmail.com"></a><i class="far fa-envelope fa-3x"></i></a>
-          <a href="tel:+57312-455-6468"></a><i class="fas fa-mobile fa-3x"></i></a>
+          <a href="https://github.com/Nukemenonai"><i class="fab fa-github fa-3x"></i></a>
+          <a href="mailto:david.giovanni.ovalle@gmail.com"><i class="far fa-envelope fa-3x"></i></a>
+          <a href="tel:+57312-455-6468"><i class="fas fa-mobile fa-3x"></i></a>
         </div>
         
     </section>
