update: buttons on cards

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <div class="card-body">
                 <h5 class="card-title">HelpMePay</h5>
                 <p class="card-text">HelpMePay is a crowdlending app built in flutter as a final project for Holberton School</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <a href="#" class="btn btn-primary">More details</a>
                 </div>
           </div>
           <div class="card" style="width: 18rem;">
@@ -47,7 +47,7 @@
             <div class="card-body">
 		<h5 class="card-title">AirBnB clone</h5>
               <p class="card-text">a clone of the airbnb website made using python flask, nginx, mysql, html jquery</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <a href="#" class="btn btn-primary">More details</a>
             </div>
           </div>
           <div class="card" style="width: 18rem;">
@@ -55,7 +55,7 @@
             <div class="card-body">
                 <h5 class="card-title">Twitter Bot</h5>
                 <p class="card-text">A web scrapping self tweeting bot made using python and deployed to heroku</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <a href="#" class="btn btn-primary">More details</a>
                 </div>
             </div>
             </div>
